@@ -1,3 +1,10 @@
+2002-10-23  Elena Zannoni  <ezannoni@redhat.com>
+
+	* symtab.c (symbol_demangled_name): New function.
+	* symtab.h (SYMBOL_DEMANGLED_NAME): Simplify macro, by
+	turning most of it into a function.
+	(symbol_demangled_name): Export.
+
 2002-10-23  Michael Snyder  <msnyder@redhat.com>
 
 	* valops.c (value_of_local): Restore quotes in error message.
